<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListReunionActivity">




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_reunion" />

    <TextView
        android:id="@+id/recycler_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/pas_de_reunion"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addReunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/design_default_color_background"
        android:clickable="true"
        android:tint="@color/white"
        app:backgroundTint="@color/teal_700"
        app:fabSize="normal"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/ic_baseline_playlist_add_24" />




</androidx.constraintlayout.widget.ConstraintLayout>