...
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.openclassrooms.mareu.ui.listReunionActivity">

        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/baseline_subject_24"
            android:title="@string/settings"
            app:showAsAction="ifRoom">

                <menu>

...
